@@ -139,3 +139,79 @@ const int bgconv[] = {
 	255,		//Static - not used in SI	115
 	136			//Tick Tock			116
 };
+
+
+// A -1 means no equivalent.
+const int bgconvsong[] = {
+	-1, 	// 0
+	-1, 	// 1
+	-1, 	// 2
+	70, 	// 3
+	68, 	// 4
+	69, 	// 5
+	67, 	// 6
+	66, 	// 7
+	-1, 	// 8
+	 0, 	// 9
+	 1, 	// 10
+	 2, 	// 11
+	 3, 	// 12
+	 4, 	// 13
+	 5, 	// 14
+	 6, 	// 15
+	 7, 	// 16
+	 8, 	// 17
+	 9, 	// 18
+	10, 	// 19
+	11, 	// 20
+	12, 	// 21
+	13, 	// 22
+	14, 	// 23
+	15, 	// 24
+	16, 	// 25
+	17, 	// 26
+	18, 	// 27
+	19, 	// 28
+	20, 	// 29
+	21, 	// 30
+	22, 	// 31
+	23, 	// 32
+	24, 	// 33
+	25, 	// 34
+	26, 	// 35
+	27, 	// 36
+	28, 	// 37
+	29, 	// 38
+	-1, 	// 39
+	30, 	// 40
+	31, 	// 41
+	32, 	// 42
+	33, 	// 43
+	34, 	// 44
+	35, 	// 45
+	36, 	// 46
+	37, 	// 47
+	38, 	// 48
+	39, 	// 49
+	40, 	// 50
+	41, 	// 51
+	42, 	// 52
+	43, 	// 53
+	-1, 	// 54
+	44, 	// 55
+	45, 	// 56
+	46, 	// 57
+	47, 	// 58
+	48, 	// 59
+	-1, 	// 60
+	-1, 	// 61
+	-1, 	// 62
+	-1, 	// 63
+	-1, 	// 64
+	-1, 	// 65
+	-1, 	// 66
+	-1, 	// 67
+	-1, 	// 68
+	-1, 	// 69
+	-1  	// 70
+};
